--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "passgen",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://anthonykusuma.github.io",
+  "homepage": "https://anthonykusuma.github.io/passgen",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -39,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24"
   }
 }
