--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "save-dev": "^0.0.1-security",
+    "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
