--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Password Generator",
+  "name": "A simple password generator built with React and Tailwind",
   "icons": [
     {
       "src": "favicon.ico",
