--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://anthonykusuma.github.io/passgen",
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +12,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.2",
     "save-dev": "^0.0.1-security",
     "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4"
